--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <h2 class="card-title font-bold">Presnel Kimpembe</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary" onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                                 <h2 class="card-title font-bold">Sergio Ramos</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary" onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
                                 <h2 class="card-title font-bold">Lionel Messi</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                                 <h2 class="card-title font-bold">Neymar</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                                 <h2 class="card-title font-bold">Kylian Mbappé</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                                 <h2 class="card-title font-bold">Vitinha</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <h2 class="card-title font-bold">Achraf Hakimi</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                 <h2 class="card-title font-bold">Marco Verratti</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                                 <h2 class="card-title font-bold">Marquinhos</h2>
                                 <p>36 Goal . 120 Assist</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary ">SELECTE</button>
+                                    <button class="btn btn-primary " onclick="addToCart(this)">SELECTE</button>
                                 </div>
                             </div>
                         </div>
@@ -165,13 +165,20 @@
 
                                 </tr>
                             </thead>
-
+                            <tbody id="players-list">
+                                <!-- row -->
+                                <!-- <tr>
+                                    <th>1</th>
+                                    <td>name</td>
+                                </tr> -->
+                            </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <script src="js/player.js"></script>
 </body>
 <!-- Footer Section -->
 <footer class="footer footer-center p-4 bg-base-300 text-base-content">
