--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="text-white text-center">
             <div class="w-full bg-top bg-cover bg-center p-12"
                 style="background-image: url('images/banner/banner5.jpg')">
-                <h1 class="text-5xl font-bold">Choose Your Favorit Players</h1>
+                <h1 class="text-5xl font-bold text-violet-500">Choose Your Favorit Players</h1>
                 <h5 class="text-1xl">Let's be clear, though, about those words "right now." This list takes into account
                     the players'
                     current form with their club and country.</h5>
@@ -157,7 +157,7 @@
                     <div>
                         <h2 class="text-5xl font-semibold">Selected-V</h2>
                         <!-- table -->
-                        <div class="overflow-x-auto mt-10">
+                        <div id="table-list" class="overflow-x-auto mt-10">
                             <table class=" w-full px-5">
                                 <thead>
                                     <tr>
@@ -176,13 +176,14 @@
                         <input id="per-player-field" type="" name="" class="mt-12">
                         <button id="btn-calculate"
                             class="block mx-auto mt-4 bg-violet-700 rounded px-9 py-2 mb-4">Calculate</button>
-                        <h2> Player Expenses: $<span>000</span></h2>
+                        <h2> Player Expenses: $<span id="player-expenses">000</span></h2>
                         <label> Manager: </label>
-                        <input type="" name="" id="" class="mt-4"> <br>
+                        <input id="manager-field" type="" name="" class="mt-4"> <br>
                         <label> Coach: </label>
-                        <input type="" name="" id="" class="mt-4">
-                        <button class="block mx-auto mt-4 bg-violet-700 rounded px-5 py-2 mb-4">Calculate Total</button>
-                        <h2> Total: $<span class="text-orange-500">000</span></h2>
+                        <input id="coach-field" type="" name="" class="mt-4">
+                        <button id="btn-total-calculate"
+                            class="block mx-auto mt-4 bg-violet-700 rounded px-5 py-2 mb-4">Calculate Total</button>
+                        <h2> Total: $<span id="total" class="text-orange-500">000</span></h2>
                     </div>
                 </div>
             </div>
