--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body class="bg-black">
     <header>
-        <section class="text-white text-center">
-            <div class="w-full bg-top bg-cover bg-center p-12"
-                style="background-image: url('images/banner/banner5.jpg')">
-                <h1 class="text-5xl font-bold text-violet-500">Choose Your Favorit Players</h1>
-                <h5 class="text-1xl">Let's be clear, though, about those words "right now." This list takes into account
+        <section class=" background text-white text-center">
+            <div class="p-12">
+                <h1 class="text-5xl font-bold text-violet-500 pb-5">Choose Your Favorit Players</h1>
+                <h5 class="text-1xl text-red-300">Let's be clear, though, about those words "right now." This list takes
+                    into account
                     the players'
                     current form with their club and country.</h5>
             </div>
