--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
     <script src="js/player.js"></script>
 </body>
 <!-- Footer Section -->
-<footer class="footer footer-center p-4 bg-base-300 text-base-content">
+<footer class="footer footer-center p-4 bg-black text-base-content">
     <div>
         <hr>
-        <p>Copyright © 2022 - All right reserved by ACME Industries Ltd</p>
+        <p>Copyright © 2022 - All right reserved</p>
     </div>
 </footer>
 
